SERVER-24582 handle errors in asio close

(cherry picked from commit b370d7ef98005a32ae9534a7a4f62fb7539ab85d)